
nobase_dist_share_DATA =
nobase_nodist_share_DATA =

nobase_dist_share_DATA += \
	pixmaps/AfterStep.xpm \
	pixmaps/fltk-editor.xpm \
	pixmaps/fvwm_clipped.png \
	pixmaps/fvwm_noback.png \
	pixmaps/fvwm.png \
	pixmaps/fvwm.xpm \
	pixmaps/gv.png \
	pixmaps/gv.xpm \
	pixmaps/imagic.png \
	pixmaps/imagic.xpm \
	pixmaps/lxde-icon.png \
	pixmaps/metacity.png \
	pixmaps/mini.fvwm.xpm \
	pixmaps/mini-start.xpm \
	pixmaps/pekwm_logo2.png \
	pixmaps/pekwm_logo.png \
	pixmaps/redhat-starthere.png \
	pixmaps/start-menu.xpm \
	pixmaps/window-above.xpm \
	pixmaps/window-below.xpm \
	pixmaps/window-border.xpm \
	pixmaps/window-close.xpm \
	pixmaps/window-command.xpm \
	pixmaps/window-focus.xpm \
	pixmaps/window-kill.xpm \
	pixmaps/window-lower.xpm \
	pixmaps/window-maximize-b.xpm \
	pixmaps/window-maximize-h.xpm \
	pixmaps/window-maximize-v.xpm \
	pixmaps/window-maximize.xpm \
	pixmaps/window-menu.xpm \
	pixmaps/window-minimize.xpm \
	pixmaps/window-move.xpm \
	pixmaps/window-normal.xpm \
	pixmaps/window-raise.xpm \
	pixmaps/window-resize.xpm \
	pixmaps/window-sendto-d.xpm \
	pixmaps/window-sendto-l.xpm \
	pixmaps/window-sendto-r.xpm \
	pixmaps/window-sendto-u.xpm \
	pixmaps/window-sendto.xpm \
	pixmaps/window-shade.xpm \
	pixmaps/window-snap.xpm \
	pixmaps/window-stick.xpm \
	pixmaps/window-titlebar.xpm \
	pixmaps/window-unmaximize-b.xpm \
	pixmaps/window-unmaximize-h.xpm \
	pixmaps/window-unmaximize-v.xpm \
	pixmaps/window-unmaximize.xpm \
	pixmaps/window-unminimize.xpm \
	pixmaps/window-unshade.xpm \
	pixmaps/window-unstick.xpm \
	pixmaps/xdvi.png \
	pixmaps/xdvi.xpm \
	pixmaps/xv.png \
	pixmaps/xv.xpm


nobase_dist_share_DATA += \
	icons/Mist/16x16/apps/start-here.png \
	icons/Mist/192x192/apps/start-here.png \
	icons/Mist/64x64/apps/start-here.png

nobase_dist_share_DATA += \
	icons/hicolor/48x48/devices/chip.png \
	icons/hicolor/48x48/devices/ExpansionCard.png \
	icons/hicolor/48x48/devices/Harddrive.png \
	icons/hicolor/48x48/devices/Memory.png \
	icons/hicolor/48x48/devices/Notebook.png \
	icons/hicolor/48x48/devices/PLIP.png \
	icons/hicolor/48x48/devices/plip.png \
	icons/hicolor/48x48/devices/USB.png \
	icons/hicolor/56x56/devices/Computer.png \
	icons/hicolor/56x56/devices/Harddrive2.png

nobase_dist_share_DATA += \
	icons/hicolor/48x48/status/aptdaemon-add.png \
	icons/hicolor/48x48/status/aptdaemon-cleanup.png \
	icons/hicolor/48x48/status/aptdaemon-delete.png \
	icons/hicolor/48x48/status/aptdaemon-download.png \
	icons/hicolor/48x48/status/aptdaemon-resolve.png \
	icons/hicolor/48x48/status/aptdaemon-update-cache.png \
	icons/hicolor/48x48/status/aptdaemon-upgrade.png \
	icons/hicolor/48x48/status/aptdaemon-wait.png \
	icons/hicolor/48x48/status/aptdaemon-working.png

nobase_dist_share_DATA += \
	icons/hicolor/scalable/actions/unexicon-new.svg \
	icons/hicolor/scalable/actions/window-close2.svg \
	icons/hicolor/scalable/actions/window-close.svg \
	icons/hicolor/scalable/actions/window-kill2.svg \
	icons/hicolor/scalable/actions/window-kill.svg \
	icons/hicolor/scalable/actions/window-maximize2.svg \
	icons/hicolor/scalable/actions/window-maximize-b2.svg \
	icons/hicolor/scalable/actions/window-maximize-b.svg \
	icons/hicolor/scalable/actions/window-maximize-h2.svg \
	icons/hicolor/scalable/actions/window-maximize-h.svg \
	icons/hicolor/scalable/actions/window-maximize.svg \
	icons/hicolor/scalable/actions/window-maximize-v2.svg \
	icons/hicolor/scalable/actions/window-maximize-v.svg \
	icons/hicolor/scalable/actions/window-minimize2.svg \
	icons/hicolor/scalable/actions/window-minimize.svg \
	icons/hicolor/scalable/actions/window-move.svg \
	icons/hicolor/scalable/actions/window-resize.svg \
	icons/hicolor/scalable/actions/window-sendto.svg \
	icons/hicolor/scalable/actions/window-shade2.svg \
	icons/hicolor/scalable/actions/window-shade.svg \
	icons/hicolor/scalable/actions/window-stick.svg


nobase_dist_share_DATA += \
	icons/hicolor/16x16/actions/application-exit.png \
	icons/hicolor/16x16/actions/gnome-logout.png \
	icons/hicolor/16x16/actions/system-lock-screen.png \
	icons/hicolor/16x16/actions/system-log-out.png \
	icons/hicolor/16x16/actions/system-reboot.png \
	icons/hicolor/16x16/actions/system-shutdown.png \
	icons/hicolor/16x16/actions/system-suspend-hibernate.png \
	icons/hicolor/16x16/actions/system-suspend.png \
	icons/hicolor/16x16/actions/system-switch-user.png \
	icons/hicolor/16x16/actions/window-above.png \
	icons/hicolor/16x16/actions/window-below.png \
	icons/hicolor/16x16/actions/window-border.png \
	icons/hicolor/16x16/actions/window-close.png \
	icons/hicolor/16x16/actions/window-command.png \
	icons/hicolor/16x16/actions/window-focus.png \
	icons/hicolor/16x16/actions/window-kill.png \
	icons/hicolor/16x16/actions/window-lower.png \
	icons/hicolor/16x16/actions/window-maximize-b.png \
	icons/hicolor/16x16/actions/window-maximize-h.png \
	icons/hicolor/16x16/actions/window-maximize.png \
	icons/hicolor/16x16/actions/window-maximize-v.png \
	icons/hicolor/16x16/actions/window-menu.png \
	icons/hicolor/16x16/actions/window-minimize.png \
	icons/hicolor/16x16/actions/window-move.png \
	icons/hicolor/16x16/actions/window-normal.png \
	icons/hicolor/16x16/actions/window-raise.png \
	icons/hicolor/16x16/actions/window-resize.png \
	icons/hicolor/16x16/actions/window-sendto-d.png \
	icons/hicolor/16x16/actions/window-sendto-l.png \
	icons/hicolor/16x16/actions/window-sendto.png \
	icons/hicolor/16x16/actions/window-sendto-r.png \
	icons/hicolor/16x16/actions/window-sendto-u.png \
	icons/hicolor/16x16/actions/window-shade.png \
	icons/hicolor/16x16/actions/window-snap.png \
	icons/hicolor/16x16/actions/window-stick.png \
	icons/hicolor/16x16/actions/window-titlebar.png \
	icons/hicolor/16x16/actions/window-unmaximize-b.png \
	icons/hicolor/16x16/actions/window-unmaximize-h.png \
	icons/hicolor/16x16/actions/window-unmaximize.png \
	icons/hicolor/16x16/actions/window-unmaximize-v.png \
	icons/hicolor/16x16/actions/window-unminimize.png \
	icons/hicolor/16x16/actions/window-unshade.png \
	icons/hicolor/16x16/actions/window-unstick.png \
	icons/hicolor/22x22/actions/application-exit.png \
	icons/hicolor/22x22/actions/gnome-logout.png \
	icons/hicolor/22x22/actions/gnome-session-halt.png \
	icons/hicolor/22x22/actions/gnome-session-hibernate.png \
	icons/hicolor/22x22/actions/gnome-session-logout.png \
	icons/hicolor/22x22/actions/gnome-session-reboot.png \
	icons/hicolor/22x22/actions/gnome-session-suspend.png \
	icons/hicolor/22x22/actions/gnome-session-switch.png \
	icons/hicolor/22x22/actions/system-lock-screen.png \
	icons/hicolor/22x22/actions/system-log-out.png \
	icons/hicolor/22x22/actions/system-reboot.png \
	icons/hicolor/22x22/actions/system-shutdown.png \
	icons/hicolor/22x22/actions/system-suspend-hibernate.png \
	icons/hicolor/22x22/actions/system-suspend.png \
	icons/hicolor/22x22/actions/system-switch-user.png \
	icons/hicolor/32x32/actions/application-exit.png \
	icons/hicolor/32x32/actions/system-lock-screen.png \
	icons/hicolor/32x32/actions/system-log-out.png \
	icons/hicolor/32x32/actions/system-reboot.png \
	icons/hicolor/32x32/actions/system-shutdown.png \
	icons/hicolor/32x32/actions/system-suspend-hibernate.png \
	icons/hicolor/32x32/actions/system-suspend.png \
	icons/hicolor/32x32/actions/system-switch-user.png \
	icons/hicolor/48x48/actions/application-exit.png \
	icons/hicolor/48x48/actions/gnome-logout.png \
	icons/hicolor/48x48/actions/gnome-session-halt.png \
	icons/hicolor/48x48/actions/gnome-session-hibernate.png \
	icons/hicolor/48x48/actions/gnome-session-logout.png \
	icons/hicolor/48x48/actions/gnome-session-reboot.png \
	icons/hicolor/48x48/actions/gnome-session-suspend.png \
	icons/hicolor/48x48/actions/gnome-session-switch.png \
	icons/hicolor/48x48/actions/PadlockClosed.png \
	icons/hicolor/48x48/actions/PadlockOpen.png \
	icons/hicolor/48x48/actions/system-lock-screen.png \
	icons/hicolor/48x48/actions/system-log-out.png \
	icons/hicolor/48x48/actions/system-reboot.png \
	icons/hicolor/48x48/actions/system-shutdown.png \
	icons/hicolor/48x48/actions/system-suspend-hibernate.png \
	icons/hicolor/48x48/actions/system-suspend.png \
	icons/hicolor/48x48/actions/system-switch-user.png \
	icons/hicolor/64x64/actions/application-exit.png \
	icons/hicolor/64x64/actions/system-lock-screen.png \
	icons/hicolor/64x64/actions/system-log-out.png \
	icons/hicolor/64x64/actions/system-reboot.png \
	icons/hicolor/64x64/actions/system-shutdown.png \
	icons/hicolor/64x64/actions/system-suspend-hibernate.png \
	icons/hicolor/64x64/actions/system-suspend.png \
	icons/hicolor/64x64/actions/system-switch-user.png

nobase_dist_share_DATA += \
	icons/hicolor/16x16/apps/chbg.png \
	icons/hicolor/16x16/apps/fvwm-crystal.png \
	icons/hicolor/16x16/apps/fvwm.png \
	icons/hicolor/16x16/apps/gnome-logout.png \
	icons/hicolor/16x16/apps/gnome-session-halt.png \
	icons/hicolor/16x16/apps/gnome-session-hibernate.png \
	icons/hicolor/16x16/apps/gnome-session-logout.png \
	icons/hicolor/16x16/apps/gnome-session-reboot.png \
	icons/hicolor/16x16/apps/gnome-session-sleep.png \
	icons/hicolor/16x16/apps/gnome-session-suspend.png \
	icons/hicolor/16x16/apps/gnome-session-switch.png \
	icons/hicolor/16x16/apps/icewm.png \
	icons/hicolor/16x16/apps/start-here.png \
	icons/hicolor/16x16/apps/WindowMaker.png \
	icons/hicolor/192x192/apps/start-here.png \
	icons/hicolor/22x22/apps/aterm.png \
	icons/hicolor/22x22/apps/fvwm-crystal.png \
	icons/hicolor/22x22/apps/fvwm.png \
	icons/hicolor/22x22/apps/gnome-logout.png \
	icons/hicolor/22x22/apps/gnome-session-halt.png \
	icons/hicolor/22x22/apps/gnome-session-hibernate.png \
	icons/hicolor/22x22/apps/gnome-session-logout.png \
	icons/hicolor/22x22/apps/gnome-session-reboot.png \
	icons/hicolor/22x22/apps/gnome-session-sleep.png \
	icons/hicolor/22x22/apps/gnome-session-suspend.png \
	icons/hicolor/22x22/apps/gnome-session-switch.png \
	icons/hicolor/22x22/apps/nano.png \
	icons/hicolor/24x24/apps/fvwm.png \
	icons/hicolor/24x24/apps/gnome-session-halt.png \
	icons/hicolor/24x24/apps/gnome-session-hibernate.png \
	icons/hicolor/24x24/apps/gnome-session-reboot.png \
	icons/hicolor/24x24/apps/gnome-session-sleep.png \
	icons/hicolor/24x24/apps/gnome-session-suspend.png \
	icons/hicolor/24x24/apps/gnome-session-switch.png \
	icons/hicolor/24x24/apps/postscript-viewer.png \
	icons/hicolor/32x32/apps/acroread.png \
	icons/hicolor/32x32/apps/amsn.png \
	icons/hicolor/32x32/apps/arach.png \
	icons/hicolor/32x32/apps/ArmyOps.png \
	icons/hicolor/32x32/apps/aterm.png \
	icons/hicolor/32x32/apps/bluefish.png \
	icons/hicolor/32x32/apps/cards.png \
	icons/hicolor/32x32/apps/cdburner.png \
	icons/hicolor/32x32/apps/cdrom.png \
	icons/hicolor/32x32/apps/chbg.png \
	icons/hicolor/32x32/apps/clock.png \
	icons/hicolor/32x32/apps/compression.png \
	icons/hicolor/32x32/apps/concentration.png \
	icons/hicolor/32x32/apps/configuration.png \
	icons/hicolor/32x32/apps/dice.png \
	icons/hicolor/32x32/apps/dillo.png \
	icons/hicolor/32x32/apps/dosbox.png \
	icons/hicolor/32x32/apps/dvd.png \
	icons/hicolor/32x32/apps/editorWindow.png \
	icons/hicolor/32x32/apps/evolution.png \
	icons/hicolor/32x32/apps/exit.png \
	icons/hicolor/32x32/apps/file_transfer.png \
	icons/hicolor/32x32/apps/floppy.png \
	icons/hicolor/32x32/apps/fluxbox.png \
	icons/hicolor/32x32/apps/frozen-bubble.png \
	icons/hicolor/32x32/apps/ftp.png \
	icons/hicolor/32x32/apps/fvwm-crystal.png \
	icons/hicolor/32x32/apps/fvwm.png \
	icons/hicolor/32x32/apps/gaim.png \
	icons/hicolor/32x32/apps/gcalctool.png \
	icons/hicolor/32x32/apps/gedit.png \
	icons/hicolor/32x32/apps/gnome-cd.png \
	icons/hicolor/32x32/apps/gnome-dictionary.png \
	icons/hicolor/32x32/apps/gnome-logout.png \
	icons/hicolor/32x32/apps/gnome-networktool.png \
	icons/hicolor/32x32/apps/gnome-pack-deb.png \
	icons/hicolor/32x32/apps/gnome-pack-rpm.png \
	icons/hicolor/32x32/apps/gnome-panel-screenshot.png \
	icons/hicolor/32x32/apps/gnome-session-halt.png \
	icons/hicolor/32x32/apps/gnome-session-hibernate.png \
	icons/hicolor/32x32/apps/gnome-session-logout.png \
	icons/hicolor/32x32/apps/gnome-session-reboot.png \
	icons/hicolor/32x32/apps/gnome-session-sleep.png \
	icons/hicolor/32x32/apps/gnome-session-suspend.png \
	icons/hicolor/32x32/apps/gnome-session-switch.png \
	icons/hicolor/32x32/apps/gnome-terminal.png \
	icons/hicolor/32x32/apps/gnumeric.png \
	icons/hicolor/32x32/apps/gv.png \
	icons/hicolor/32x32/apps/home-mdk.png \
	icons/hicolor/32x32/apps/home.png \
	icons/hicolor/32x32/apps/ical.png \
	icons/hicolor/32x32/apps/icewm.png \
	icons/hicolor/32x32/apps/k3b.png \
	icons/hicolor/32x32/apps/kedit.png \
	icons/hicolor/32x32/apps/kfm.png \
	icons/hicolor/32x32/apps/kmail.png \
	icons/hicolor/32x32/apps/kppp.png \
	icons/hicolor/32x32/apps/kwrite.png \
	icons/hicolor/32x32/apps/lime.png \
	icons/hicolor/32x32/apps/mozilla-mail.png \
	icons/hicolor/32x32/apps/mozilla.png \
	icons/hicolor/32x32/apps/nano.png \
	icons/hicolor/32x32/apps/nautilus.png \
	icons/hicolor/32x32/apps/netscape.png \
	icons/hicolor/32x32/apps/nvu.png \
	icons/hicolor/32x32/apps/oocalc.png \
	icons/hicolor/32x32/apps/ooffice.png \
	icons/hicolor/32x32/apps/oowriter.png \
	icons/hicolor/32x32/apps/paint.png \
	icons/hicolor/32x32/apps/pan.png \
	icons/hicolor/32x32/apps/pdf.png \
	icons/hicolor/32x32/apps/penguin.png \
	icons/hicolor/32x32/apps/print_printer.png \
	icons/hicolor/32x32/apps/qcad.png \
	icons/hicolor/32x32/apps/readme.png \
	icons/hicolor/32x32/apps/rpm.png \
	icons/hicolor/32x32/apps/samba.png \
	icons/hicolor/32x32/apps/sound.png \
	icons/hicolor/32x32/apps/spreadsheet.png \
	icons/hicolor/32x32/apps/sylpheed.png \
	icons/hicolor/32x32/apps/tbird.png \
	icons/hicolor/32x32/apps/telescope.png \
	icons/hicolor/32x32/apps/toys_section.png \
	icons/hicolor/32x32/apps/trash.png \
	icons/hicolor/32x32/apps/usbkey.png \
	icons/hicolor/32x32/apps/vectorgfx.png \
	icons/hicolor/32x32/apps/videocam.png \
	icons/hicolor/32x32/apps/WindowMaker.png \
	icons/hicolor/32x32/apps/xclock.png \
	icons/hicolor/32x32/apps/xemacs.png \
	icons/hicolor/32x32/apps/xine.png \
	icons/hicolor/32x32/apps/xkill.png \
	icons/hicolor/32x32/apps/xmms.png \
	icons/hicolor/32x32/apps/xpdf.png \
	icons/hicolor/32x32/apps/xscreensaver.png \
	icons/hicolor/32x32/apps/xwc.png \
	icons/hicolor/36x36/apps/fvwm.png \
	icons/hicolor/48x48/apps/acroread.png \
	icons/hicolor/48x48/apps/AfterStep2.png \
	icons/hicolor/48x48/apps/AfterStep.png \
	icons/hicolor/48x48/apps/amsn.png \
	icons/hicolor/48x48/apps/arach.png \
	icons/hicolor/48x48/apps/ArmyOps.png \
	icons/hicolor/48x48/apps/aterm.png \
	icons/hicolor/48x48/apps/bluefish.png \
	icons/hicolor/48x48/apps/cards.png \
	icons/hicolor/48x48/apps/cdburner.png \
	icons/hicolor/48x48/apps/cdrom.png \
	icons/hicolor/48x48/apps/chbg.png \
	icons/hicolor/48x48/apps/clock.png \
	icons/hicolor/48x48/apps/compression.png \
	icons/hicolor/48x48/apps/concentration.png \
	icons/hicolor/48x48/apps/configuration.png \
	icons/hicolor/48x48/apps/dice.png \
	icons/hicolor/48x48/apps/dillo.png \
	icons/hicolor/48x48/apps/dosbox.png \
	icons/hicolor/48x48/apps/dvd.png \
	icons/hicolor/48x48/apps/editorWindow.png \
	icons/hicolor/48x48/apps/evolution.png \
	icons/hicolor/48x48/apps/exit.png \
	icons/hicolor/48x48/apps/file_transfer.png \
	icons/hicolor/48x48/apps/floppy.png \
	icons/hicolor/48x48/apps/frozen-bubble.png \
	icons/hicolor/48x48/apps/ftp.png \
	icons/hicolor/48x48/apps/fvwm-crystal.png \
	icons/hicolor/48x48/apps/fvwm.png \
	icons/hicolor/48x48/apps/gaim.png \
	icons/hicolor/48x48/apps/gcalctool.png \
	icons/hicolor/48x48/apps/gedit.png \
	icons/hicolor/48x48/apps/gnome-cd.png \
	icons/hicolor/48x48/apps/gnome-dictionary.png \
	icons/hicolor/48x48/apps/gnome-logout.png \
	icons/hicolor/48x48/apps/gnome-networktool.png \
	icons/hicolor/48x48/apps/gnome-pack-deb.png \
	icons/hicolor/48x48/apps/gnome-pack-rpm.png \
	icons/hicolor/48x48/apps/gnome-panel-screenshot.png \
	icons/hicolor/48x48/apps/gnome-session-halt.png \
	icons/hicolor/48x48/apps/gnome-session-hibernate.png \
	icons/hicolor/48x48/apps/gnome-session-logout.png \
	icons/hicolor/48x48/apps/gnome-session-reboot.png \
	icons/hicolor/48x48/apps/gnome-session-suspend.png \
	icons/hicolor/48x48/apps/gnome-session-switch.png \
	icons/hicolor/48x48/apps/gnome-terminal.png \
	icons/hicolor/48x48/apps/gnumeric.png \
	icons/hicolor/48x48/apps/GNUStep3D.png \
	icons/hicolor/48x48/apps/GNUStepGlow.png \
	icons/hicolor/48x48/apps/GNUStep.png \
	icons/hicolor/48x48/apps/gv.png \
	icons/hicolor/48x48/apps/home-mdk.png \
	icons/hicolor/48x48/apps/home.png \
	icons/hicolor/48x48/apps/ical.png \
	icons/hicolor/48x48/apps/icewm.png \
	icons/hicolor/48x48/apps/k3b.png \
	icons/hicolor/48x48/apps/kedit.png \
	icons/hicolor/48x48/apps/kfm.png \
	icons/hicolor/48x48/apps/kmail.png \
	icons/hicolor/48x48/apps/kppp.png \
	icons/hicolor/48x48/apps/kwrite.png \
	icons/hicolor/48x48/apps/lime.png \
	icons/hicolor/48x48/apps/mozilla-mail.png \
	icons/hicolor/48x48/apps/mozilla.png \
	icons/hicolor/48x48/apps/nano.png \
	icons/hicolor/48x48/apps/nautilus.png \
	icons/hicolor/48x48/apps/netscape.png \
	icons/hicolor/48x48/apps/nvu.png \
	icons/hicolor/48x48/apps/oocalc.png \
	icons/hicolor/48x48/apps/ooffice.png \
	icons/hicolor/48x48/apps/oowriter.png \
	icons/hicolor/48x48/apps/paint.png \
	icons/hicolor/48x48/apps/pan.png \
	icons/hicolor/48x48/apps/pdf.png \
	icons/hicolor/48x48/apps/penguin.png \
	icons/hicolor/48x48/apps/postscript-viewer.png \
	icons/hicolor/48x48/apps/print_printer.png \
	icons/hicolor/48x48/apps/qcad.png \
	icons/hicolor/48x48/apps/readme.png \
	icons/hicolor/48x48/apps/rpm.png \
	icons/hicolor/48x48/apps/samba.png \
	icons/hicolor/48x48/apps/sound.png \
	icons/hicolor/48x48/apps/spreadsheet.png \
	icons/hicolor/48x48/apps/sylpheed.png \
	icons/hicolor/48x48/apps/tbird.png \
	icons/hicolor/48x48/apps/telescope.png \
	icons/hicolor/48x48/apps/toys_section.png \
	icons/hicolor/48x48/apps/trash.png \
	icons/hicolor/48x48/apps/usbkey.png \
	icons/hicolor/48x48/apps/vectorgfx.png \
	icons/hicolor/48x48/apps/videocam.png \
	icons/hicolor/48x48/apps/WindowMaker.png \
	icons/hicolor/48x48/apps/XApp.png \
	icons/hicolor/48x48/apps/xclock.png \
	icons/hicolor/48x48/apps/xemacs.png \
	icons/hicolor/48x48/apps/xine.png \
	icons/hicolor/48x48/apps/xkill.png \
	icons/hicolor/48x48/apps/xmms.png \
	icons/hicolor/48x48/apps/xpdf.png \
	icons/hicolor/48x48/apps/xscreensaver.png \
	icons/hicolor/48x48/apps/xwc.png \
	icons/hicolor/48x48/apps/XWindow2.png \
	icons/hicolor/48x48/apps/XWindow3.png \
	icons/hicolor/48x48/apps/XWindow.png \
	icons/hicolor/56x56/apps/AfterStep3.png \
	icons/hicolor/56x56/apps/AfterStep4.png \
	icons/hicolor/56x56/apps/arch-logo.png \
	icons/hicolor/56x56/apps/start-here.png \
	icons/hicolor/64x64/apps/allin1.png \
	icons/hicolor/64x64/apps/arch-logo.png \
	icons/hicolor/64x64/apps/fvwm.png \
	icons/hicolor/64x64/apps/gnome-logout.png \
	icons/hicolor/64x64/apps/gnome-session-halt.png \
	icons/hicolor/64x64/apps/gnome-session-hibernate.png \
	icons/hicolor/64x64/apps/gnome-session-logout.png \
	icons/hicolor/64x64/apps/gnome-session-reboot.png \
	icons/hicolor/64x64/apps/gnome-session-suspend.png \
	icons/hicolor/64x64/apps/gnome-session-switch.png \
	icons/hicolor/64x64/apps/GNUstep3D.png \
	icons/hicolor/64x64/apps/GNUstep.png \
	icons/hicolor/64x64/apps/start-here.png \
	icons/hicolor/64x64/apps/xclock.png \
	icons/hicolor/72x72/apps/arch-logo.png \
	icons/hicolor/96x96/apps/arch-logo.png \
	icons/hicolor/128x128/apps/arch-logo.png \
	icons/hicolor/128x128/apps/fvwm.png

hicolor_ICONS = \
	icons/hicolor/scalable/apps/2bWM.svg \
	icons/hicolor/scalable/apps/adwm.svg \
	icons/hicolor/scalable/apps/aewm.svg \
	icons/hicolor/scalable/apps/AfterStep.svg \
	icons/hicolor/scalable/apps/archlinux-wm-awesome.svg \
	icons/hicolor/scalable/apps/archlinux-wm-base.svg \
	icons/hicolor/scalable/apps/archlinux-wm-blackbox.svg \
	icons/hicolor/scalable/apps/archlinux-wm-dwm.svg \
	icons/hicolor/scalable/apps/archlinux-wm-fluxbox.svg \
	icons/hicolor/scalable/apps/archlinux-wm-fvwm.svg \
	icons/hicolor/scalable/apps/archlinux-wm-gnome.svg \
	icons/hicolor/scalable/apps/archlinux-wm-icewm.svg \
	icons/hicolor/scalable/apps/archlinux-wm-jwm.svg \
	icons/hicolor/scalable/apps/archlinux-wm-kde2.svg \
	icons/hicolor/scalable/apps/archlinux-wm-kdemod.svg \
	icons/hicolor/scalable/apps/archlinux-wm-kde.svg \
	icons/hicolor/scalable/apps/archlinux-wm-openbox.svg \
	icons/hicolor/scalable/apps/archlinux-wm-pekwm.svg \
	icons/hicolor/scalable/apps/archlinux-wm-twm.svg \
	icons/hicolor/scalable/apps/archlinux-wm-wmaker.svg \
	icons/hicolor/scalable/apps/archlinux-wm-xfce.svg \
	icons/hicolor/scalable/apps/archlinux-wm-xmonad.svg \
	icons/hicolor/scalable/apps/arch-logo.svg \
	icons/hicolor/scalable/apps/awesome.svg \
	icons/hicolor/scalable/apps/blackbox.svg \
	icons/hicolor/scalable/apps/ctwm.svg \
	icons/hicolor/scalable/apps/dwm.svg \
	icons/hicolor/scalable/apps/eeschema.svg \
	icons/hicolor/scalable/apps/evilwm.svg \
	icons/hicolor/scalable/apps/fluxbox.svg \
	icons/hicolor/scalable/apps/GNUstep3D.svg \
	icons/hicolor/scalable/apps/GNUstep.svg \
	icons/hicolor/scalable/apps/i3.svg \
	icons/hicolor/scalable/apps/jwm.svg \
	icons/hicolor/scalable/apps/larswm.svg \
	icons/hicolor/scalable/apps/mwm.svg \
	icons/hicolor/scalable/apps/pawm.svg \
	icons/hicolor/scalable/apps/pekwm.svg \
	icons/hicolor/scalable/apps/spectrwm.svg \
	icons/hicolor/scalable/apps/twm.svg \
	icons/hicolor/scalable/apps/velox.svg \
	icons/hicolor/scalable/apps/vtwm.svg \
	icons/hicolor/scalable/apps/windwm.svg \
	icons/hicolor/scalable/apps/wm2.svg \
	icons/hicolor/scalable/apps/wmaker.svg \
	icons/hicolor/scalable/apps/wmii.svg \
	icons/hicolor/scalable/apps/wmx.svg \
	icons/hicolor/scalable/apps/xdwm.svg \
	icons/hicolor/scalable/apps/xlogo.svg \
	icons/hicolor/scalable/apps/xterm.svg \
	icons/hicolor/scalable/apps/yeahwm.svg

pixmap_ICONS =
#	pixmaps/abiword_48.svg \
#	pixmaps/abiword.svg \
#	pixmaps/accessories-text-editor.svg \
#	pixmaps/acroread.svg \
#	pixmaps/AdobeReader8.svg \
#	pixmaps/AdobeReader.svg \
#	pixmaps/adobe-reader.svg \
#	pixmaps/alltray.svg \
#	pixmaps/amsn.svg \
#	pixmaps/amule.svg \
#	pixmaps/anyremote.svg \
#	pixmaps/apparmor_app_armor.svg \
#	pixmaps/application-default-icon.svg \
#	pixmaps/application-x-remote-connection.svg \
#	pixmaps/application-x-vnc.svg \
#	pixmaps/ardour.svg \
#	pixmaps/audacious2.svg \
#	pixmaps/audacity.svg \
#	pixmaps/audio-player.svg \
#	pixmaps/avidemux_icon.svg \
#	pixmaps/avidemux.svg \
#	pixmaps/Azureus.svg \
#	pixmaps/azureus.svg \
#	pixmaps/background.svg \
#	pixmaps/badge-small.svg \
#	pixmaps/balsa.svg \
#	pixmaps/bash.svg \
#	pixmaps/blender.svg \
#	pixmaps/bluefish_icon.svg \
#	pixmaps/bluefish-icon.svg \
#	pixmaps/bluefish.svg \
#	pixmaps/blueradio-48.svg \
#	pixmaps/blueradio.svg \
#	pixmaps/bluetooth-48.svg \
#	pixmaps/bluetoothradio.svg \
#	pixmaps/bootdisk_create.svg \
#	pixmaps/boot.svg \
#	pixmaps/brasero.svg \
#	pixmaps/bt-logo.svg \
#	pixmaps/bum.svg \
#	pixmaps/cacao-oj6.svg \
#	pixmaps/cairo-clock.svg \
#	pixmaps/caja.svg \
#	pixmaps/ccsm.svg \
#	pixmaps/checkbox.svg \
#	pixmaps/cheese.svg \
#	pixmaps/cinelerra.svg \
#	pixmaps/claws-mail.svg \
#	pixmaps/clock.svg \
#	pixmaps/compiz.svg \
#	pixmaps/computerjanitor.svg \
#	pixmaps/conduit-icon.svg \
#	pixmaps/conduit.svg \
#	pixmaps/cowbell.svg \
#	pixmaps/cupsprinter.svg \
#	pixmaps/d4x.svg \
#	pixmaps/defaultgroup.svg \
#	pixmaps/deja-dup-symbolic.svg \
#	pixmaps/deluge.svg \
#	pixmaps/deluge-torrent.svg \
#	pixmaps/desktop-effects.svg \
#	pixmaps/dhcpcd.svg \
#	pixmaps/dia_gnome_icon.svg \
#	pixmaps/dia-gnome.svg \
#	pixmaps/dia.svg \
#	pixmaps/display-capplet.svg \
#	pixmaps/dogtail-head.svg \
#	pixmaps/dogtail-tail.svg \
#	pixmaps/drakmenustyle.svg \
#	pixmaps/drakstats.svg \
#	pixmaps/eclipse.svg \
#	pixmaps/edit-urpm-sources.svg \
#	pixmaps/eekboard.svg \
#	pixmaps/ekiga.svg \
#	pixmaps/emacs.svg \
#	pixmaps/email.svg \
#	pixmaps/emerald.svg \
#	pixmaps/emerald-theme-manager-icon.svg \
#	pixmaps/emesene.svg \
#	pixmaps/empathy.svg \
#	pixmaps/epiphany-bookmarks.svg \
#	pixmaps/eq.svg \
#	pixmaps/Etermutilities-terminal.svg \
#	pixmaps/ettercap.svg \
#	pixmaps/evolution-memos.svg \
#	pixmaps/evolution-tasklist.svg \
#	pixmaps/evolution-tasks.svg \
#	pixmaps/exaile.svg \
#	pixmaps/exaile-tray-icon.svg \
#	pixmaps/fedora-logo-icon.svg \
#	pixmaps/fedora-logo-sprite.svg \
#	pixmaps/file-manager.svg \
#	pixmaps/filezilla.svg \
#	pixmaps/firestarter.svg \
#	pixmaps/firewall.svg \
#	pixmaps/flegita.svg \
#	pixmaps/force-exit.svg \
#	pixmaps/fusion-icon.svg \
#	pixmaps/gajim.svg \
#	pixmaps/gdebi.svg \
#	pixmaps/gdeb.svg \
#	pixmaps/gdmflexiserver.svg \
#	pixmaps/gdm-setup.svg \
#	pixmaps/gdmsetup.svg \
#	pixmaps/gdm-suse.svg \
#	pixmaps/gdm.svg \
#	pixmaps/gdm-xnest.svg \
#	pixmaps/gdu-category-multidisk.svg \
#	pixmaps/gdu-category-multipath.svg \
#	pixmaps/gdu-category-peripheral.svg \
#	pixmaps/gdu-check-disk.svg \
#	pixmaps/gdu-detach.svg \
#	pixmaps/gdu-eject.svg \
#	pixmaps/gdu-emblem-lvm-lv.svg \
#	pixmaps/gdu-emblem-lvm-vg.svg \
#	pixmaps/gdu-emblem-mp-component.svg \
#	pixmaps/gdu-emblem-mp.svg \
#	pixmaps/gdu-emblem-raid0.svg \
#	pixmaps/gdu-emblem-raid10.svg \
#	pixmaps/gdu-emblem-raid1.svg \
#	pixmaps/gdu-emblem-raid3.svg \
#	pixmaps/gdu-emblem-raid4.svg \
#	pixmaps/gdu-emblem-raid5.svg \
#	pixmaps/gdu-emblem-raid6.svg \
#	pixmaps/gdu-emblem-raid-linear.svg \
#	pixmaps/gdu-encrypted-lock.svg \
#	pixmaps/gdu-encrypted-unlock.svg \
#	pixmaps/gdu-error.svg \
#	pixmaps/gdu-expander.svg \
#	pixmaps/gdu-hba.svg \
#	pixmaps/gdu-info.svg \
#	pixmaps/gdu-mount.svg \
#	pixmaps/gdu-multidisk-drive.svg \
#	pixmaps/gdu-raid-array-start.svg \
#	pixmaps/gdu-raid-array-stop.svg \
#	pixmaps/gdu-raid-array.svg \
#	pixmaps/gdu-smart-failing.svg \
#	pixmaps/gdu-smart-healthy.svg \
#	pixmaps/gdu-smart-threshold.svg \
#	pixmaps/gdu-smart-unknown.svg \
#	pixmaps/gdu-unmountable.svg \
#	pixmaps/gdu-unmount.svg \
#	pixmaps/gdu-warning.svg \
#	pixmaps/geany.svg \
#	pixmaps/geda-gattrib.svg \
#	pixmaps/geda-gschem.svg \
#	pixmaps/gedit-icon.svg \
#	pixmaps/gedit-logo.svg \
#	pixmaps/gftp.svg \
#	pixmaps/gksu-debian.svg \
#	pixmaps/gksu-root-terminal.svg \
#	pixmaps/glipper.svg \
#	pixmaps/gmplayer.svg \
#	pixmaps/gnochm.svg \
#	pixmaps/gnome-app-install.svg \
#	pixmaps/gnome-apt.svg \
#	pixmaps/gnome-ataxx.svg \
#	pixmaps/gnomebaker-48.svg \
#	pixmaps/gnomebaker.svg \
#	pixmaps/gnome-blog.svg \
#	pixmaps/gnome-bluetooth.svg \
#	pixmaps/gnome-ccwindowmanager.svg \
#	pixmaps/gnome-chess-symbolic.svg \
#	pixmaps/gnome-device-manager.svg \
#	pixmaps/gnome-dictionary.svg \
#	pixmaps/gnome-do.svg \
#	pixmaps/gnome-eterm.svg \
#	pixmaps/gnome-fs-blockdev.svg \
#	pixmaps/gnome-fs-bookmark-missing.svg \
#	pixmaps/gnome-fs-bookmark.svg \
#	pixmaps/gnome-gmenu.svg \
#	pixmaps/gnome-gnomine.svg \
#	pixmaps/gnome-gnumeric.svg \
#	pixmaps/gnome-help.svg \
#	pixmaps/gnome-logo-white.svg \
#	pixmaps/gnome-mime-application-x-remote-connection.svg \
#	pixmaps/gnome-mime-application-x-vnc.svg \
#	pixmaps/gnome-monitor.svg \
#	pixmaps/gnome-mplayer.svg \
#	pixmaps/gnome-nettool.svg \
#	pixmaps/gnome-network-properties.svg \
#	pixmaps/gnome-news.svg \
#	pixmaps/gnome-nibbles.svg \
#	pixmaps/gnome-note.svg \
#	pixmaps/gnome-palm.svg \
#	pixmaps/gnome-pdf.svg \
#	pixmaps/gnome-pilot2.svg \
#	pixmaps/gnome-pilot.svg \
#	pixmaps/gnome-planner.svg \
#	pixmaps/gnome-reclevel.svg \
#	pixmaps/gnome-remote-desktop.svg \
#	pixmaps/gnome-session-halt.svg \
#	pixmaps/gnome-session-hibernate.svg \
#	pixmaps/gnome-session-properties.svg \
#	pixmaps/gnome-session-reboot.svg \
#	pixmaps/gnome-session-sleep.svg \
#	pixmaps/gnome-session-suspend.svg \
#	pixmaps/gnome-session-switch.svg \
#	pixmaps/gnome-set-time.svg \
#	pixmaps/gnome-settings-background.svg \
#	pixmaps/gnome-settings-default-applications.svg \
#	pixmaps/gnome-settings-sound.svg \
#	pixmaps/gnome-settings-theme.svg \
#	pixmaps/gnome-shutdown.svg \
#	pixmaps/gnome-sound-recorder.svg \
#	pixmaps/gnome.svg \
#	pixmaps/gnome-system-monitor.svg \
#	pixmaps/gnome-terminal.svg \
#	pixmaps/gnome-term.svg \
#	pixmaps/gnome-translate.svg \
#	pixmaps/gnome-volume-control.svg \
#	pixmaps/gnome-vumeter.svg \
#	pixmaps/gnome-window-manager.svg \
#	pixmaps/gnome-windows.svg \
#	pixmaps/gnome-word.svg \
#	pixmaps/gnome-workspace.svg \
#	pixmaps/gnome-xterm.svg \
#	pixmaps/gnormalize.svg \
#	pixmaps/gnote.svg \
#	pixmaps/gnotski.svg \
#	pixmaps/gnumeric.svg \
#	pixmaps/gogglesmm.svg \
#	pixmaps/goobox.svg \
#	pixmaps/gparted.svg \
#	pixmaps/gpicview.svg \
#	pixmaps/gpk-log.svg \
#	pixmaps/gpk-prefs.svg \
#	pixmaps/gpk-repo.svg \
#	pixmaps/gpk-service-pack.svg \
#	pixmaps/gpm-ac-adapter.svg \
#	pixmaps/gpm-brightness.svg \
#	pixmaps/gpm-hibernate.svg \
#	pixmaps/gpm-keyboard-000.svg \
#	pixmaps/gpm-keyboard-030.svg \
#	pixmaps/gpm-keyboard-060.svg \
#	pixmaps/gpm-keyboard-100.svg \
#	pixmaps/gpm-mouse-000.svg \
#	pixmaps/gpm-mouse-030.svg \
#	pixmaps/gpm-mouse-060.svg \
#	pixmaps/gpm-mouse-100.svg \
#	pixmaps/gpm-primary-000-charging.svg \
#	pixmaps/gpm-primary-000.svg \
#	pixmaps/gpm-primary-020-charging.svg \
#	pixmaps/gpm-primary-020.svg \
#	pixmaps/gpm-primary-040-charging.svg \
#	pixmaps/gpm-primary-040.svg \
#	pixmaps/gpm-primary-060-charging.svg \
#	pixmaps/gpm-primary-060.svg \
#	pixmaps/gpm-primary-080-charging.svg \
#	pixmaps/gpm-primary-080.svg \
#	pixmaps/gpm-primary-100-charging.svg \
#	pixmaps/gpm-primary-100.svg \
#	pixmaps/gpm-primary-charged.svg \
#	pixmaps/gpm-primary-missing.svg \
#	pixmaps/gpm-suspend.svg \
#	pixmaps/gpm-ups-000-charging.svg \
#	pixmaps/gpm-ups-000.svg \
#	pixmaps/gpm-ups-020-charging.svg \
#	pixmaps/gpm-ups-020.svg \
#	pixmaps/gpm-ups-040-charging.svg \
#	pixmaps/gpm-ups-040.svg \
#	pixmaps/gpm-ups-060-charging.svg \
#	pixmaps/gpm-ups-060.svg \
#	pixmaps/gpm-ups-080-charging.svg \
#	pixmaps/gpm-ups-080.svg \
#	pixmaps/gpm-ups-100-charging.svg \
#	pixmaps/gpm-ups-100.svg \
#	pixmaps/gpm-ups-charged.svg \
#	pixmaps/gpm-ups-missing.svg \
#	pixmaps/grandr.svg \
#	pixmaps/grip.svg \
#	pixmaps/gscan2pdf.svg \
#	pixmaps/gsd-xrandr.svg \
#	pixmaps/gswitchit-applet.svg \
#	pixmaps/gswitchit-properties-capplet.svg \
#	pixmaps/gthumb.svg \
#	pixmaps/gtk-help.svg \
#	pixmaps/gtk-recordmydesktop.svg \
#	pixmaps/gtranslator.svg \
#	pixmaps/gufw_menu.svg \
#	pixmaps/gvim.svg \
#	pixmaps/gwget.svg \
#	pixmaps/gxine.svg \
#	pixmaps/harddrake.svg \
#	pixmaps/hardinfo.svg \
#	pixmaps/help-browser.svg \
#	pixmaps/help-contents.svg \
#	pixmaps/help.svg \
#	pixmaps/hexchat.svg \
#	pixmaps/hotwire.svg \
#	pixmaps/htop.svg \
#	pixmaps/hwbrowser.svg \
#	pixmaps/hwinfo.svg \
#	pixmaps/ibus-engine.svg \
#	pixmaps/ibus-keyboard.svg \
#	pixmaps/ibus-setup.svg \
#	pixmaps/ibus.svg \
#	pixmaps/image-viewer.svg \
#	pixmaps/im-aim.svg \
#	pixmaps/im-ekiga.svg \
#	pixmaps/im-gadugadu.svg \
#	pixmaps/im-gizmo.svg \
#	pixmaps/im-google-talk.svg \
#	pixmaps/im-groupwise.svg \
#	pixmaps/im-icq.svg \
#	pixmaps/im-irc.svg \
#	pixmaps/im-jabber.svg \
#	pixmaps/im-local-xmpp.svg \
#	pixmaps/im-meanwhile.svg \
#	pixmaps/im-msn.svg \
#	pixmaps/im-mxit.svg \
#	pixmaps/im-myspace.svg \
#	pixmaps/im-qq.svg \
#	pixmaps/im-sametime.svg \
#	pixmaps/im-silc.svg \
#	pixmaps/im-sip.svg \
#	pixmaps/im-yahoo.svg \
#	pixmaps/im-zephyr.svg \
#	pixmaps/inkscape.svg \
#	pixmaps/internet-mail.svg \
#	pixmaps/internet-news-reader.svg \
#	pixmaps/invest-applet.svg \
#	pixmaps/invest-big.svg \
#	pixmaps/invest.svg \
#	pixmaps/istanbul.svg \
#	pixmaps/java.svg \
#	pixmaps/jdownloader.svg \
#	pixmaps/jokosher_icon.svg \
#	pixmaps/jokosher.svg \
#	pixmaps/kcmkwm.svg \
#	pixmaps/kde.svg \
#	pixmaps/kedit.svg \
#	pixmaps/kentoo.svg \
#	pixmaps/keyboardlayout.svg \
#	pixmaps/kfm.svg \
#	pixmaps/khelpcenter.svg \
#	pixmaps/kicad.svg \
#	pixmaps/kino.svg \
#	pixmaps/konsole.svg \
#	pixmaps/kpackage.svg \
#	pixmaps/kscreensaver.svg \
#	pixmaps/ksysguard.svg \
#	pixmaps/ktip.svg \
#	pixmaps/kuser.svg \
#	pixmaps/kwin.svg \
#	pixmaps/kynpatic.svg \
#	pixmaps/language-selector.svg \
#	pixmaps/libreoffice-base.svg \
#	pixmaps/libreoffice-calc.svg \
#	pixmaps/libreoffice-draw.svg \
#	pixmaps/libreoffice-impress.svg \
#	pixmaps/libreoffice-main.svg \
#	pixmaps/libreoffice-math.svg \
#	pixmaps/libreoffice-startcenter.svg \
#	pixmaps/libreoffice-writer.svg \
#	pixmaps/liferea.svg \
#	pixmaps/lives.svg \
#	pixmaps/localedrake.svg \
#	pixmaps/locale.svg \
#	pixmaps/lpi-translate.svg \
#	pixmaps/lv_icon.svg \
#	pixmaps/mail_generic.svg \
#	pixmaps/mandrivaupdate.svg \
#	pixmaps/mate-network-properties.svg \
#	pixmaps/mate-notification-properties.svg \
#	pixmaps/mate-panel-clock.svg \
#	pixmaps/mate-panel-drawer.svg \
#	pixmaps/mate-panel-fish.svg \
#	pixmaps/mate-panel-force-quit.svg \
#	pixmaps/mate-panel-launcher.svg \
#	pixmaps/mate-panel-notification-area.svg \
#	pixmaps/mate-panel-separator.svg \
#	pixmaps/mate-panel.svg \
#	pixmaps/mate-panel-window-list.svg \
#	pixmaps/mate-panel-window-menu.svg \
#	pixmaps/mate-panel-workspace-switcher.svg \
#	pixmaps/mate-preferences-desktop-display.svg \
#	pixmaps/mate-session-properties.svg \
#	pixmaps/mate-typing-monitor.svg \
#	pixmaps/media-player-banshee.svg \
#	pixmaps/meld.svg \
#	pixmaps/menu-editor.svg \
#	pixmaps/midori.svg \
#	pixmaps/mirage.svg \
#	pixmaps/miro-128x128.svg \
#	pixmaps/miro-24x24.svg \
#	pixmaps/miro-48x48.svg \
#	pixmaps/miro-72x72.svg \
#	pixmaps/miro.svg \
#	pixmaps/mousepad.svg \
#	pixmaps/mplayer.svg \
#	pixmaps/msg_error.svg \
#	pixmaps/msg_info.svg \
#	pixmaps/msg_warning.svg \
#	pixmaps/nautilus-actions.svg \
#	pixmaps/nautilus-gdu.svg \
#	pixmaps/nm-device-wired.svg \
#	pixmaps/nm-no-connection.svg \
#	pixmaps/notification-properties.svg \
#	pixmaps/nt.svg \
#	pixmaps/nt-wm.svg \
#	pixmaps/nx.svg \
#	pixmaps/office-mail.svg \
#	pixmaps/office-writer.svg \
#	pixmaps/ogmrip.svg \
#	pixmaps/ooo3.0.svg \
#	pixmaps/ooo-base3.0.svg \
#	pixmaps/ooo-base.svg \
#	pixmaps/ooo-calc3.0.svg \
#	pixmaps/ooo-calc.svg \
#	pixmaps/ooo-draw3.0.svg \
#	pixmaps/ooo-draw.svg \
#	pixmaps/ooo-fromtemplate3.0.svg \
#	pixmaps/ooo-fromtemplate.svg \
#	pixmaps/ooo-gulls3.0.svg \
#	pixmaps/ooo-gulls.svg \
#	pixmaps/ooo-impress3.0.svg \
#	pixmaps/ooo-impress.svg \
#	pixmaps/ooo-main3.0.svg \
#	pixmaps/ooo-main.svg \
#	pixmaps/ooo-math3.0.svg \
#	pixmaps/ooo-math.svg \
#	pixmaps/ooo-printeradmin3.0.svg \
#	pixmaps/ooo-printeradmin.svg \
#	pixmaps/ooo.svg \
#	pixmaps/ooo-template3.0.svg \
#	pixmaps/ooo-template.svg \
#	pixmaps/ooo-web3.0.svg \
#	pixmaps/ooo-web.svg \
#	pixmaps/ooo-writer3.0.svg \
#	pixmaps/ooo-writer.svg \
#	pixmaps/opennx-admin.svg \
#	pixmaps/opennx-wizard.svg \
#	pixmaps/openoffice3.0.svg \
#	pixmaps/openofficeorg3.0-base.svg \
#	pixmaps/openofficeorg3.0-calc.svg \
#	pixmaps/openofficeorg3.0-draw.svg \
#	pixmaps/openofficeorg3.0-fromtemplate.svg \
#	pixmaps/openofficeorg3.0-gulls.svg \
#	pixmaps/openofficeorg3.0-impress.svg \
#	pixmaps/openofficeorg3.0-main.svg \
#	pixmaps/openofficeorg3.0-math.svg \
#	pixmaps/openofficeorg3.0-printeradmin.svg \
#	pixmaps/openofficeorg3.0.svg \
#	pixmaps/openofficeorg3.0-template.svg \
#	pixmaps/openofficeorg3.0-web.svg \
#	pixmaps/openofficeorg3.0-writer.svg \
#	pixmaps/openofficeorg3-base.svg \
#	pixmaps/openofficeorg3-calc.svg \
#	pixmaps/openofficeorg3-draw.svg \
#	pixmaps/openofficeorg3-fromtemplate.svg \
#	pixmaps/openofficeorg3-gulls.svg \
#	pixmaps/openofficeorg3-impress.svg \
#	pixmaps/openofficeorg3-main.svg \
#	pixmaps/openofficeorg3-math.svg \
#	pixmaps/openofficeorg3-printeradmin.svg \
#	pixmaps/openofficeorg3.svg \
#	pixmaps/openofficeorg3-template.svg \
#	pixmaps/openofficeorg3-web.svg \
#	pixmaps/openofficeorg3-writer.svg \
#	pixmaps/openofficeorg-base.svg \
#	pixmaps/openofficeorg-calc.svg \
#	pixmaps/openofficeorg-draw.svg \
#	pixmaps/openofficeorg-fromtemplate.svg \
#	pixmaps/openofficeorg-gulls.svg \
#	pixmaps/openofficeorg-impress.svg \
#	pixmaps/openofficeorg-main.svg \
#	pixmaps/openofficeorg-math.svg \
#	pixmaps/openofficeorg-printeradmin.svg \
#	pixmaps/openofficeorg.svg \
#	pixmaps/openofficeorg-template.svg \
#	pixmaps/openofficeorg-web.svg \
#	pixmaps/openofficeorg-writer.svg \
#	pixmaps/openoffice.svg \
#	pixmaps/openterm.svg \
#	pixmaps/oxine.svg \
#	pixmaps/package-manager-icon.svg \
#	pixmaps/palimpsest.svg \
#	pixmaps/palm-pilot.svg \
#	pixmaps/pan.svg \
#	pixmaps/pavumeter.svg \
#	pixmaps/pcmanfm.svg \
#	pixmaps/phonon-gstreamer.svg \
#	pixmaps/pidgin-menu.svg \
#	pixmaps/pidgin.svg \
#	pixmaps/pirut.svg \
#	pixmaps/pitivi.svg \
#	pixmaps/pixie.svg \
#	pixmaps/pk-package-sources.svg \
#	pixmaps/porthole.svg \
#	pixmaps/preferences-desktop-default-applications.svg \
#	pixmaps/preferences-desktop-keyboard.svg \
#	pixmaps/preferences-desktop-locale.svg \
#	pixmaps/preferences-desktop-multimedia.svg \
#	pixmaps/preferences-desktop-remote-desktop.svg \
#	pixmaps/preferences-desktop-screensaver.svg \
#	pixmaps/preferences-desktop-sound.svg \
#	pixmaps/preferences-desktop-theme.svg \
#	pixmaps/preferences-desktop-wallpaper.svg \
#	pixmaps/preferences-sound.svg \
#	pixmaps/preferences-system-firewall-new.svg \
#	pixmaps/preferences-system-firewall.svg \
#	pixmaps/preferences-system-windows.svg \
#	pixmaps/preferences-theme.svg \
#	pixmaps/preferences-wallpaper.svg \
#	pixmaps/printer2.svg \
#	pixmaps/pup.svg \
#	pixmaps/pybliographic.svg \
#	pixmaps/pyrenamer.svg \
#	pixmaps/python2.5.svg \
#	pixmaps/python2.6.svg \
#	pixmaps/python3.0.svg \
#	pixmaps/python.svg \
#	pixmaps/qemu-launcher.svg \
#	pixmaps/qphotorec.svg \
#	pixmaps/qtconfig.svg \
#	pixmaps/qucs.svg \
#	pixmaps/qv4l2.svg \
#	pixmaps/rapidsvn.svg \
#	pixmaps/rclock.svg \
#	pixmaps/reboot-notifier.svg \
#	pixmaps/redhat-email.svg \
#	pixmaps/redhat-filemanager.svg \
#	pixmaps/referencer.svg \
#	pixmaps/remmina.svg \
#	pixmaps/resapplet.svg \
#	pixmaps/rhythmbox-notplaying.svg \
#	pixmaps/rhythmbox-tray-icon.svg \
#	pixmaps/rip.svg \
#	pixmaps/ristretto.svg \
#	pixmaps/route.svg \
#	pixmaps/rox.svg \
#	pixmaps/roxterm.svg \
#	pixmaps/rpmdrake.svg \
#	pixmaps/samba_setup.svg \
#	pixmaps/scim-setup.svg \
#	pixmaps/screensaver.svg \
#	pixmaps/scribus.svg \
#	pixmaps/seahorse-applet.svg \
#	pixmaps/seahorse-preferences.svg \
#	pixmaps/seahorse.svg \
#	pixmaps/serpentine.svg \
#	pixmaps/simple-ccsm.svg \
#	pixmaps/skype.svg \
#	pixmaps/sleep.svg \
#	pixmaps/smplayer.svg \
#	pixmaps/software-properties.svg \
#	pixmaps/sticky-notes.svg \
#	pixmaps/stock_alarm.svg \
#	pixmaps/stock_bluetooth.svg \
#	pixmaps/stock_bookmark.svg \
#	pixmaps/stock_delete-bookmark.svg \
#	pixmaps/stock_edit-bookmark.svg \
#	pixmaps/stock_help-agent.svg \
#	pixmaps/stock_help.svg \
#	pixmaps/stock_insert-note.svg \
#	pixmaps/stock_mail-open.svg \
#	pixmaps/stock_mail.svg \
#	pixmaps/stock_new-spreadsheet.svg \
#	pixmaps/stock_news.svg \
#	pixmaps/stock_notes.svg \
#	pixmaps/stock_task.svg \
#	pixmaps/stock_todo.svg \
#	pixmaps/style.svg \
#	pixmaps/sun-java6.svg \
#	pixmaps/sun_java.svg \
#	pixmaps/susehelpcenter.svg \
#	pixmaps/SuSEmenu.svg \
#	pixmaps/synaptic.svg \
#	pixmaps/system-config-boot.svg \
#	pixmaps/system-config-date.svg \
#	pixmaps/system-config-display.svg \
#	pixmaps/system-config-firewall.svg \
#	pixmaps/system-config-language.svg \
#	pixmaps/system-config-rootpassword.svg \
#	pixmaps/system-config-securitylevel.svg \
#	pixmaps/system-file-manager.svg \
#	pixmaps/system-hibernate.svg \
#	pixmaps/system-installer.svg \
#	pixmaps/system-restart.svg \
#	pixmaps/system-shutdown-panel.svg \
#	pixmaps/system-shut-down.svg \
#	pixmaps/system-shutdown.svg \
#	pixmaps/system-software-installer.svg \
#	pixmaps/system-software-install.svg \
#	pixmaps/system-software-update.svg \
#	pixmaps/system-suspend-hibernate.svg \
#	pixmaps/system-suspend.svg \
#	pixmaps/system.svg \
#	pixmaps/system-switch-user.svg \
#	pixmaps/taskbar.svg \
#	pixmaps/tdsl.svg \
#	pixmaps/Terminal.svg \
#	pixmaps/terminal.svg \
#	pixmaps/text-editor.svg \
#	pixmaps/Thunar.svg \
#	pixmaps/tigervnc.svg \
#	pixmaps/tightvnc.svg \
#	pixmaps/tilda.svg \
#	pixmaps/time.svg \
#	pixmaps/tint2conf.svg \
#	pixmaps/tomboy-note.svg \
#	pixmaps/totem-symbolic.svg \
#	pixmaps/touchpad.svg \
#	pixmaps/tsclient.svg \
#	pixmaps/tvm-burn-cd.svg \
#	pixmaps/un-reboot.svg \
#	pixmaps/update-manager.svg \
#	pixmaps/usb-creator-gtk.svg \
#	pixmaps/usb-creator.svg \
#	pixmaps/user_add.svg \
#	pixmaps/user-bookmarks.svg \
#	pixmaps/utilities-system-monitor.svg \
#	pixmaps/utilities-terminal.svg \
#	pixmaps/VBox.svg \
#	pixmaps/vim.svg \
#	pixmaps/vinagre.svg \
#	pixmaps/virtualbox.svg \
#	pixmaps/vlc.svg \
#	pixmaps/vmplayer.svg \
#	pixmaps/vmware-player.svg \
#	pixmaps/vmware-server-console.svg \
#	pixmaps/vmware-server.svg \
#	pixmaps/vmware.svg \
#	pixmaps/vmware-workstation.svg \
#	pixmaps/wallpaper.svg \
#	pixmaps/wesnoth-icon.svg \
#	pixmaps/wesnoth.svg \
#	pixmaps/winecfg.svg \
#	pixmaps/wine-doors.svg \
#	pixmaps/wine-notepad.svg \
#	pixmaps/wine.svg \
#	pixmaps/wine-uninstaller.svg \
#	pixmaps/wine-winecfg.svg \
#	pixmaps/wine-winefile.svg \
#	pixmaps/wmtweaks.svg \
#	pixmaps/wmudmount-lock.svg \
#	pixmaps/wmudmount-unlock.svg \
#	pixmaps/workspace-switcher.svg \
#	pixmaps/www.svg \
#	pixmaps/xarchiver.svg \
#	pixmaps/xboard.svg \
#	pixmaps/xchat2.svg \
#	pixmaps/xchat-gnome.svg \
#	pixmaps/xchat.svg \
#	pixmaps/xfardic-logo.svg \
#	pixmaps/xfce4-autostart-editor.svg \
#	pixmaps/xfce4-backdrop.svg \
#	pixmaps/xfce4-clock.svg \
#	pixmaps/xfce4-menueditor.svg \
#	pixmaps/xfce4-notes-plugin.svg \
#	pixmaps/xfce4-session.svg \
#	pixmaps/xfce4-splash.svg \
#	pixmaps/xfce4-systray.svg \
#	pixmaps/xfce4-taskbar.svg \
#	pixmaps/xfce4-ui.svg \
#	pixmaps/xfce4-workspaces.svg \
#	pixmaps/xfce4_xicon1.svg \
#	pixmaps/xfce-edit.svg \
#	pixmaps/xfce-filemanager.svg \
#	pixmaps/xfce-mail.svg \
#	pixmaps/xfce-man.svg \
#	pixmaps/xfce-schedule.svg \
#	pixmaps/xfce-sound.svg \
#	pixmaps/xfce-terminal.svg \
#	pixmaps/xfsm-hibernate.svg \
#	pixmaps/xfsm-reboot.svg \
#	pixmaps/xfsm-shutdown.svg \
#	pixmaps/xfsm-suspend.svg \
#	pixmaps/xfsm-switch.svg \
#	pixmaps/xfwm4.svg \
#	pixmaps/xine.svg \
#	pixmaps/xmms2-black-on-white.svg \
#	pixmaps/xmms2.svg \
#	pixmaps/xmms2-white-on-black.svg \
#	pixmaps/x-office-mail.svg \
#	pixmaps/x-pdf.svg \
#	pixmaps/xpdf.svg \
#	pixmaps/xplanetFX.svg \
#	pixmaps/xsane.svg \
#	pixmaps/xscreensaver.svg \
#	pixmaps/x-system-software-sources.svg \
#	pixmaps/xvkbd.svg \
#	pixmaps/yast-addon.svg \
#	pixmaps/yast-answering_machine.svg \
#	pixmaps/yast-autofs.svg \
#	pixmaps/yast-autoyast.svg \
#	pixmaps/yast-backup.svg \
#	pixmaps/yast-bluetooth.svg \
#	pixmaps/yast-bootfloppy.svg \
#	pixmaps/yast-bootloader.svg \
#	pixmaps/yast-bootmsg.svg \
#	pixmaps/yast-ca_mgm.svg \
#	pixmaps/yast-cd-creator.svg \
#	pixmaps/yast-cdrom.svg \
#	pixmaps/yast-cd_update.svg \
#	pixmaps/yast-checkmedia.svg \
#	pixmaps/yast-common_cert.svg \
#	pixmaps/yast-controller.svg \
#	pixmaps/yast-dasd.svg \
#	pixmaps/yast-dhcp-server.svg \
#	pixmaps/yast-dirinstall.svg \
#	pixmaps/yast-disk.svg \
#	pixmaps/yast-dns-server.svg \
#	pixmaps/yast-dns.svg \
#	pixmaps/yast-dsl.svg \
#	pixmaps/yast-dump.svg \
#	pixmaps/yast-fax.svg \
#	pixmaps/yast-fingerprint.svg \
#	pixmaps/yast-firewall.svg \
#	pixmaps/yast-groups.svg \
#	pixmaps/yast-hardware.svg \
#	pixmaps/yast-heartbeat.svg \
#	pixmaps/yast-host.svg \
#	pixmaps/yast-http-server.svg \
#	pixmaps/yast-hwinfo.svg \
#	pixmaps/yast-idedma.svg \
#	pixmaps/yast-inetd.svg \
#	pixmaps/yast-inst-mode.svg \
#	pixmaps/yast-instserver.svg \
#	pixmaps/yast-irda.svg \
#	pixmaps/yast-iscsi-client.svg \
#	pixmaps/yast-iscsi-server.svg \
#	pixmaps/yast-isdn.svg \
#	pixmaps/yast-isns.svg \
#	pixmaps/yast-joystick.svg \
#	pixmaps/yast-kerberos.svg \
#	pixmaps/yast-keyboard.svg \
#	pixmaps/yast-language.svg \
#	pixmaps/yast-lan.svg \
#	pixmaps/yast-ldap-browser.svg \
#	pixmaps/yast-ldap-server.svg \
#	pixmaps/yast-ldap.svg \
#	pixmaps/yast-license.svg \
#	pixmaps/yast-lvm_config.svg \
#	pixmaps/yast-mail-server.svg \
#	pixmaps/yast-mail.svg \
#	pixmaps/yast-messages.svg \
#	pixmaps/yast-misc.svg \
#	pixmaps/yast-modem.svg \
#	pixmaps/yast-mouse.svg \
#	pixmaps/yast-network_devices.svg \
#	pixmaps/yast-network_services.svg \
#	pixmaps/yast-network.svg \
#	pixmaps/yast-nfs_server.svg \
#	pixmaps/yast-nfs.svg \
#	pixmaps/yast-nis_server.svg \
#	pixmaps/yast-nis.svg \
#	pixmaps/yast-ntp-client.svg \
#	pixmaps/yast-online_update.svg \
#	pixmaps/yast-pci_id.svg \
#	pixmaps/yast-power-management.svg \
#	pixmaps/yast-powertweak.svg \
#	pixmaps/yast-printer.svg \
#	pixmaps/yast-product-registration.svg \
#	pixmaps/yast-profile-manager.svg \
#	pixmaps/yast-proxy.svg \
#	pixmaps/yast-release-notes.svg \
#	pixmaps/yast-remote.svg \
#	pixmaps/yast-restore.svg \
#	pixmaps/yast-routing.svg \
#	pixmaps/yast-samba-client.svg \
#	pixmaps/yast-samba-server.svg \
#	pixmaps/yast-scanner.svg \
#	pixmaps/yast-security.svg \
#	pixmaps/yast-slp-server.svg \
#	pixmaps/yast-software.svg \
#	pixmaps/yast-sound.svg \
#	pixmaps/yast_source.svg \
#	pixmaps/yast-sudoers.svg \
#	pixmaps/yast-support.svg \
#	pixmaps/yast-sw_single.svg \
#	pixmaps/yast-sw_source.svg \
#	pixmaps/yast-sysconfig.svg \
#	pixmaps/yast-system.svg \
#	pixmaps/yast-tftp-server.svg \
#	pixmaps/yast-timezone.svg \
#	pixmaps/yast-tv.svg \
#	pixmaps/yast-uml.svg \
#	pixmaps/yast-update.svg \
#	pixmaps/yast-vdisk.svg \
#	pixmaps/yast-vendor.svg \
#	pixmaps/yast-wol.svg \
#	pixmaps/yast-x11.svg \
#	pixmaps/yast-xpram.svg \
#	pixmaps/yast-yast-language.svg \
#	pixmaps/yast-zfcp.svg \
#	pixmaps/yumex.svg \
#	pixmaps/zen-icon.svg \
#	pixmaps/zim.svg

dist_noinst_DATA = \
	$(hicolor_ICONS) \
	$(pixmap_ICONS)

install-data-local:
	$(NORMAL_INSTALL)
	@x="$(DESTDIR)$(sharedir)/pixmaps/" ; \
	test -d "$$x" || $(MKDIR_P) "$$x" ; \
	list="$(hicolor_ICONS)" ; for f in $$list ; do \
		p=`basename "$$f" .svg`.png ; \
		g=`basename "$$f" .svg`.svg ; \
		d=; if test -f "$(srcdir)/$$f" ; then d="$(srcdir)/" ; fi ; \
		t="$(DESTDIR)$(sharedir)/icons/hicolor/scalable/apps/" ; \
		test -d "$$t" || $(MKDIR_P) "$$t" ; \
		echo "  INST  $$t$$g" ; \
		rsvg-convert -w 48 -h 48 -z 1.0 -f svg "$$d$$f" | sed -e 's,"48pt","48px",g' >"$$t$$g" ; \
		echo "  INST  $$x$$g" ; \
		rm -f "$$x$$g" ; ln -sf "../icons/hicolor/scalable/apps/$$g" "$$x$$g" ; \
		if test "$$p" = "xlogo.png" -o "$$p" = "arch-logo.png"; then \
			sizes="16 22 24 32 36 48 56 64 72 96 100 128 256" ; \
		else \
			sizes="16 24 32 48 56 64" ; \
		fi ; \
		for s in $$sizes ; do \
			t="$(DESTDIR)$(sharedir)/icons/hicolor/$${s}x$${s}/apps/" ; \
			test -d "$$t" || $(MKDIR_P) "$$t" ; \
			echo "  INST  $$t$$p" ; \
			rsvg-convert -w $$s -h $$s -z 1.0 -f png "$$x$$g" -o "$$t$$p" ; \
		done ; \
		echo "  INST  $$x$$p" ; \
		rm -f "$$x$$p" ; ln -sf "../icons/hicolor/48x48/apps/$$p" "$$x$$p" ; \
	done ; \
	list="$(pixmap_ICONS)" ; for f in $$list ; do \
		p=`basename "$$f" .svg`.png ; \
		g=`basename "$$f" .svg`.svg ; \
		d=; if test -f "$(srcdir)/$$f" ; then d="$(srcdir)/" ; fi ; \
		echo "  INST  $$x$$g" ; \
		rsvg-convert -w 48 -h 48 -z 1.0 -f svg "$$d$$f" | sed -e 's,"48pt","48px",g' >"$$x$$g" ; \
		echo "  INST  $$x$$p" ; \
		rsvg-convert -w 48 -h 48 -z 1.0 -f png "$$x$$g" -o "$$x$$p" ; \
	done

# rsvg-convert -w $$s -h $$s -f png "$$d$$f" -o "$$t/$$p"
# convert -resize $${s}x$${s} -background None "$$d$$f" "$$t/$$p"
